--- a/forum_proj/forum_app/templates/forum_app/issue_detail.html
+++ b/forum_proj/forum_app/templates/forum_app/issue_detail.html
@@ -1,18 +1,36 @@
 <h2>{{ issue.title }}</h2>
 <p>{{ issue.description }}</p>
 <p>Status: {{ issue.status }}</p>
-<p>Owner: {{ issue.owner.username if issue.owner else "Publisher deleted" }}</p>
+
+<p>
+  Owner:
+  {% if issue.owner %}
+    {{ issue.owner.username }}
+  {% else %}
+    Publisher deleted
+  {% endif %}
+</p>
 
 {% if issue.status == 'pending' %}
-<form method="post">{% csrf_token %}
-  <textarea name="content" placeholder="Add a comment"></textarea><br>
-  <button type="submit">Comment</button>
-</form>
+  <form method="post">
+    {% csrf_token %}
+    <textarea name="content" placeholder="Add a comment"></textarea><br>
+    <button type="submit">Comment</button>
+  </form>
 {% endif %}
 
 <h3>Comments:</h3>
 {% for c in issue.comments.all %}
-  <p><b>{{ c.author.username if c.author else "Deleted user" }}</b>: {{ c.content }}</p>
+  <p>
+    <b>
+      {% if c.author %}
+        {{ c.author.username }}
+      {% else %}
+        Deleted user
+      {% endif %}
+    </b>:
+    {{ c.content }}
+  </p>
 {% empty %}
   No comments yet.
 {% endfor %}
