--- a/forum_proj/forum_app/templates/forum_app/dashboard.html
+++ b/forum_proj/forum_app/templates/forum_app/dashboard.html
@@ -1,10 +1,26 @@
-<h2>Welcome, {{ request.user.username }}</h2>
-<a href="{% url 'create_issue' %}">Create Issue</a> |
-<form method="post" action="{% url 'logout' %}">
-  {% csrf_token %}
-  <button type="submit">Logout</button>
-</form>
+{% load static %}
+<header>
+    <link rel="stylesheet" type="text/css" href="{% static 'forum_app/styles.css' %}">
 
+    <h2>Welcome, {{ request.user.username }}</h2>
+
+    <div class="header-buttons">
+        <!-- Create Issue button -->
+        <a href="{% url 'create_issue' %}" class="btn-create">Create Issue</a>
+
+        <!-- Vertical separator -->
+        <div class="line-vertical"></div>
+
+        <!-- Logout button -->
+        <form method="post" action="{% url 'logout' %}">
+           
+            <button type="submit" class="btn-logout">Logout</button>
+        </form>
+    </div>
+</header>
+
+
+</header>
 
 <h3>Pending Issues</h3>
 {% for issue in pending %}
