--- a/forum_proj/forum_app/templates/forum_app/create_issue.html
+++ b/forum_proj/forum_app/templates/forum_app/create_issue.html
@@ -1,5 +1,8 @@
+{% load static %}
+<link rel="stylesheet" type="text/css" href="{% static 'forum_app/styles.css' %}">
+
 <form method="post">{% csrf_token %}
-  <label>Title:</label><input type="text" name="title"><br>
-  <label>Description:</label><textarea name="description"></textarea><br>
-  <button type="submit">Create</button>
+  <label>Title: </label><input type="text" name="title"><br><br>
+  <label>Description: </label><textarea name="description"></textarea><br><br>
+  <button type="submit" class="btn-logout">Create</button>
 </form>
