--- a/forum_proj/forum_app/static/forum_app/styles.css
+++ b/forum_proj/forum_app/static/forum_app/styles.css
@@ -1,3 +1,10 @@
+body {
+    font-family: 'Verdana', sans-serif;
+	font-size: 16px;
+}
+
+button { font: inherit; }
+
 .header-buttons {
     display: flex;
     align-items: center; 
